# MovieTicketBooking

./: CMakeLists.txt  Jenkinsfile
include/: Movie.h
src/: Movie.cpp  main.cpp
tests/: CMakeLists.txt  test_movie.cpp
